; ModuleID = '/home/carl/AnghaBench/exploitdb/shellcodes/arm/extr_43536.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/shellcodes/arm/extr_43536.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [50 x i8] c"shellcode=%d bytes\0Aconnecting to %d.%d.%d.%d:%hd\0A\00", align 1
@sc = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %2 = load i32*, i32** @sc, align 8
  %3 = getelementptr inbounds i32, i32* %2, i64 60
  %4 = load i32, i32* %3, align 4
  %5 = load i32*, i32** @sc, align 8
  %6 = getelementptr inbounds i32, i32* %5, i64 61
  %7 = load i32, i32* %6, align 4
  %8 = load i32*, i32** @sc, align 8
  %9 = getelementptr inbounds i32, i32* %8, i64 62
  %10 = load i32, i32* %9, align 4
  %11 = load i32*, i32** @sc, align 8
  %12 = getelementptr inbounds i32, i32* %11, i64 63
  %13 = load i32, i32* %12, align 4
  %14 = load i32*, i32** @sc, align 8
  %15 = getelementptr inbounds i32, i32* %14, i64 58
  %16 = bitcast i32* %15 to i16*
  %17 = load i16, i16* %16, align 2
  %18 = call i32 @SWAP16(i16 zeroext %17)
  %19 = call i32 @printf(i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str, i64 0, i64 0), i32 8, i32 %4, i32 %7, i32 %10, i32 %13, i32 %18)
  %20 = load i32*, i32** @sc, align 8
  %21 = bitcast i32* %20 to i32 ()*
  %22 = call i32 %21()
  ret i32 %22
}

declare dso_local i32 @printf(i8*, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @SWAP16(i16 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
